// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlightBookingDeleteConfirmation /> #render() still matches snapshot 1`] = `
<DeleteConfirmationDialog
  dialogTitle={
    <FormattedMessage
      defaultMessage="Delete Flight Itinerary"
      id="app.Event.components.FlightBookingDeleteConfirmation.title"
    />
  }
  headlineText={
    <FormattedMessage
      defaultMessage="Are you sure you want to delete this flight itinerary?"
      id="app.Event.components.FlightBookingDeleteConfirmation.text"
    />
  }
  headlineTitle={
    <FormattedMessage
      defaultMessage="You are about to delete an itinerary"
      id="app.Event.components.FlightBookingDeleteConfirmation.headlineWithoutBookingNumber"
    />
  }
  onCancel={[MockFunction]}
  onConfirm={[MockFunction]}
  open={false}
/>
`;

exports[`<FlightBookingDeleteConfirmation /> #render() still matches snapshot with name 1`] = `
<DeleteConfirmationDialog
  dialogTitle={
    <FormattedMessage
      defaultMessage="Delete Flight Itinerary"
      id="app.Event.components.FlightBookingDeleteConfirmation.title"
    />
  }
  headlineText={
    <FormattedMessage
      defaultMessage="Are you sure you want to delete this flight itinerary?"
      id="app.Event.components.FlightBookingDeleteConfirmation.text"
    />
  }
  headlineTitle={
    <WithStyles(GridContainer)
      alignItems="center"
      direction="column"
      spacing={0}
    >
      <WithStyles(GridItem)>
        <FormattedMessage
          defaultMessage="You are about to delete:"
          id="app.Event.components.FlightBookingDeleteConfirmation.headlineWithBookingNumber"
        />
      </WithStyles(GridItem)>
      <WithStyles(GridItem)>
        Some name
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  }
  onCancel={[MockFunction]}
  onConfirm={[MockFunction]}
  open={false}
/>
`;
